--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,3 +1,8 @@
-<p>
-  posts works!
-</p>
+<h1>Posts</h1>
+<ul>
+  <li *ngFor="let post of posts">
+    <a href="../details/{{post.userId}}">Author: {{post.userId}}</a>
+    <p><strong>{{post.title}}</strong></p>
+    <span>{{post.body}}</span>
+  </li>
+</ul>
