--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,10 @@
 <nav>
   <ul>
-    <li><a routerLink=""><i class="material-icons">supervised_user_circle</i></a></li>
-    <li><a routerLink="posts"><i class="material-icons">message</i></a></li>
+    <li><a routerLink="" [class.activated]="currrentUrl == '/' ">
+      <i class="material-icons">supervised_user_circle</i></a>
+    </li>
+    <li><a routerLink="posts" [class.activated]="currrentUrl == '/posts' ">
+      <i class="material-icons">message</i></a>
+    </li>
   </ul>
 </nav>
